[package]
name = "liveshot"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["BorisAnthony"]
keywords = ["screenshot", "capture", "youtube", "livestream", "video"]
description = "Capture screenshots of web pages and YouTube live streams using headless Chrome."
repository = "https://github.com/BorisAnthony/LiveShot"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["cargo", "derive"] }
headless_chrome = "1.0.18"
tokio = { version = "1.48.0", features = ["full"] }
